added changes to notifs

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ In this process I learnt that you can't predict what's going to happen. The only
 
       <section>
         <h1>Click on the bell for Notifications</h1>
-        <div id="suprsend-inbox"></div>
+        <div id="suprsend-inbox" class="div" style="background-color: whitesmoke;"></div>
 
 <script type="text/javascript">
   function initializeSuprSend(distinctId, subscriberId) {
